@@ -1,6 +1,13 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - group_[and_update]_list_automatic() now has an optional
+   argument "criterion" for chosing the way how the best
+   grouping is chosen. The old method was "avg", while the new
+   default is "min", because we have found this to be considerably
+   better in our tests.
+
+
 Version 3.2.6, Jun 08, 2010
 ----------------------------
 
